Add validate field 🦊

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -19,6 +19,9 @@
       "@hooks/*": [
         "hooks/*"
       ],
+      "@contexts/*": [
+        "contexts/*"
+      ],
     }
   },
   "exclude": [
