--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "date-fns": "^2.22.1",
     "framer-motion": "^4.1.17",
     "lodash": "^4.17.21",
     "next": "11.0.1",
