--- a/jsconfig.json
+++ b/jsconfig.json
@@ -22,6 +22,9 @@
       "@contexts/*": [
         "contexts/*"
       ],
+      "@constants/*": [
+        "constants/*"
+      ],
     }
   },
   "exclude": [
