--- a/jsconfig.json
+++ b/jsconfig.json
@@ -25,6 +25,9 @@
       "@constants/*": [
         "constants/*"
       ],
+      "@utils/*": [
+        "utils/*"
+      ],
     }
   },
   "exclude": [
