--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^4.1.17",
     "lodash": "^4.17.21",
     "next": "11.0.1",
+    "next-seo": "^4.26.0",
     "react": "17.0.2",
     "react-datepicker": "^4.1.1",
     "react-dom": "17.0.2",
